--- a/My_CPP03/ex03/ex01/Makefile
+++ b/My_CPP03/ex03/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: ikawamuk <ikawamuk@student.42tokyo.jp>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/10/07 19:24:02 by ikawamuk          #+#    #+#              #
-#    Updated: 2025/11/07 15:34:17 by ikawamuk         ###   ########.fr        #
+#    Updated: 2025/10/31 20:53:50 by ikawamuk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,14 +20,7 @@ NAME	= main
 # --- SOURCES ---
 SRC_FILES	=	main.cpp \
 				ClapTrap.cpp \
-				Trap.cpp \
-				Name.cpp \
-				HitPoints.cpp \
-				EnergyPoints.cpp \
-				AttackDamage.cpp \
-				TrapFactory.cpp \
-				ClapTrapFactory.cpp \
-				trap_test.cpp \
+				ScavTrap.cpp \
 
 SRCS	= $(addprefix $(SRCDIR)/,$(SRC_FILES))
 
